--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.0.2
   provider: ^6.1.5+1
   firebase_core: ^4.1.0
+  google_fonts: ^6.3.1
 
 dev_dependencies:
   flutter_test:
