--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.5+1
   firebase_core: ^4.1.0
   google_fonts: ^6.3.1
+  firebase_app_check: ^0.4.0+1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
