--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.3.1
   firebase_app_check: ^0.4.0+1
   table_calendar: ^3.2.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
