--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_app_check: ^0.4.0+1
   table_calendar: ^3.2.0
   fl_chart: ^1.1.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
