--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   table_calendar: ^3.2.0
   fl_chart: ^1.1.1
   shared_preferences: ^2.5.3
+  firebase_vertexai: ^2.2.0
 
 dev_dependencies:
   flutter_test:
