--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   table_calendar: ^3.2.0
   fl_chart: ^1.1.1
   shared_preferences: ^2.5.3
-  firebase_vertexai: ^2.2.0
+  get_it: ^8.2.0
+  equatable: ^2.0.7
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
